Evaluated nf1 model after plate name bug fix

--- a/2.evaluate_models/classify_genotypes/genotype_classification_evaluation.ipynb
+++ b/2.evaluate_models/classify_genotypes/genotype_classification_evaluation.ipynb
@@ -16,10 +16,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T15:18:43.441371Z",
-     "iopub.status.busy": "2024-05-28T15:18:43.441273Z",
-     "iopub.status.idle": "2024-05-28T15:18:43.881204Z",
-     "shell.execute_reply": "2024-05-28T15:18:43.880752Z"
+     "iopub.execute_input": "2024-06-24T21:00:48.092379Z",
+     "iopub.status.busy": "2024-06-24T21:00:48.092278Z",
+     "iopub.status.idle": "2024-06-24T21:00:48.521692Z",
+     "shell.execute_reply": "2024-06-24T21:00:48.521222Z"
     },
     "jukit_cell_id": "RcnXoNLyM2"
    },
@@ -54,10 +54,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T15:18:43.883371Z",
-     "iopub.status.busy": "2024-05-28T15:18:43.883164Z",
-     "iopub.status.idle": "2024-05-28T15:18:43.885951Z",
-     "shell.execute_reply": "2024-05-28T15:18:43.885633Z"
+     "iopub.execute_input": "2024-06-24T21:00:48.524095Z",
+     "iopub.status.busy": "2024-06-24T21:00:48.523891Z",
+     "iopub.status.idle": "2024-06-24T21:00:48.527054Z",
+     "shell.execute_reply": "2024-06-24T21:00:48.526660Z"
     },
     "jukit_cell_id": "QmTyYX7yVG"
    },
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T15:18:43.887510Z",
-     "iopub.status.busy": "2024-05-28T15:18:43.887238Z",
-     "iopub.status.idle": "2024-05-28T15:18:46.028279Z",
-     "shell.execute_reply": "2024-05-28T15:18:46.027699Z"
+     "iopub.execute_input": "2024-06-24T21:00:48.528613Z",
+     "iopub.status.busy": "2024-06-24T21:00:48.528502Z",
+     "iopub.status.idle": "2024-06-24T21:00:48.573776Z",
+     "shell.execute_reply": "2024-06-24T21:00:48.573330Z"
     },
     "jukit_cell_id": "zFHiLC64Ss"
    },
@@ -123,7 +123,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-06-24T21:00:48.575497Z",
+     "iopub.status.busy": "2024-06-24T21:00:48.575253Z",
+     "iopub.status.idle": "2024-06-24T21:00:48.605297Z",
+     "shell.execute_reply": "2024-06-24T21:00:48.604902Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -570,10 +577,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T15:18:46.030507Z",
-     "iopub.status.busy": "2024-05-28T15:18:46.030240Z",
-     "iopub.status.idle": "2024-05-28T15:18:46.032567Z",
-     "shell.execute_reply": "2024-05-28T15:18:46.032188Z"
+     "iopub.execute_input": "2024-06-24T21:00:48.638345Z",
+     "iopub.status.busy": "2024-06-24T21:00:48.638182Z",
+     "iopub.status.idle": "2024-06-24T21:00:48.640668Z",
+     "shell.execute_reply": "2024-06-24T21:00:48.640298Z"
     },
     "jukit_cell_id": "byqT0qeQSc"
    },
@@ -588,10 +595,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T15:18:46.033936Z",
-     "iopub.status.busy": "2024-05-28T15:18:46.033729Z",
-     "iopub.status.idle": "2024-05-28T15:18:46.036279Z",
-     "shell.execute_reply": "2024-05-28T15:18:46.035949Z"
+     "iopub.execute_input": "2024-06-24T21:00:48.642372Z",
+     "iopub.status.busy": "2024-06-24T21:00:48.642188Z",
+     "iopub.status.idle": "2024-06-24T21:00:48.644839Z",
+     "shell.execute_reply": "2024-06-24T21:00:48.644447Z"
     },
     "jukit_cell_id": "7K1U3LMO6u"
    },
@@ -631,10 +638,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T15:18:46.037654Z",
-     "iopub.status.busy": "2024-05-28T15:18:46.037467Z",
-     "iopub.status.idle": "2024-05-28T15:18:46.042660Z",
-     "shell.execute_reply": "2024-05-28T15:18:46.042299Z"
+     "iopub.execute_input": "2024-06-24T21:00:48.646287Z",
+     "iopub.status.busy": "2024-06-24T21:00:48.646109Z",
+     "iopub.status.idle": "2024-06-24T21:00:48.651064Z",
+     "shell.execute_reply": "2024-06-24T21:00:48.650735Z"
     },
     "jukit_cell_id": "l12u5TJUQx"
    },
@@ -712,10 +719,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T15:18:46.044014Z",
-     "iopub.status.busy": "2024-05-28T15:18:46.043822Z",
-     "iopub.status.idle": "2024-05-28T15:20:02.836630Z",
-     "shell.execute_reply": "2024-05-28T15:20:02.836080Z"
+     "iopub.execute_input": "2024-06-24T21:00:48.652463Z",
+     "iopub.status.busy": "2024-06-24T21:00:48.652288Z",
+     "iopub.status.idle": "2024-06-24T21:00:48.875220Z",
+     "shell.execute_reply": "2024-06-24T21:00:48.874721Z"
     },
     "jukit_cell_id": "GGD1QwPX1B"
    },
@@ -749,10 +756,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T15:20:02.839758Z",
-     "iopub.status.busy": "2024-05-28T15:20:02.839593Z",
-     "iopub.status.idle": "2024-05-28T15:20:15.664973Z",
-     "shell.execute_reply": "2024-05-28T15:20:15.664485Z"
+     "iopub.execute_input": "2024-06-24T21:00:48.877414Z",
+     "iopub.status.busy": "2024-06-24T21:00:48.877266Z",
+     "iopub.status.idle": "2024-06-24T21:00:48.921163Z",
+     "shell.execute_reply": "2024-06-24T21:00:48.920748Z"
     },
     "jukit_cell_id": "zubg81WM3n"
    },
@@ -787,7 +794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
