Retrainined NF1 model without plate 4 cell data

--- a/1.train_models/classify_genotypes/classify_genotypes.ipynb
+++ b/1.train_models/classify_genotypes/classify_genotypes.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Classify WT and Null Genotypes Logistic Regression\n",
-    "Plates 3, 3p, 4, and 5 are used in all splits to classify genotypes either (WT or Null)\n",
+    "Plates 3, 3p, and 5 are used in all splits to classify genotypes either (WT or Null)\n",
     "The feature selected data is used in all data splits.\n",
     "Pre-evaluation metrics are stored from all splits and these plates."
    ]
@@ -17,10 +17,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T21:31:21.640804Z",
-     "iopub.status.busy": "2024-06-14T21:31:21.640572Z",
-     "iopub.status.idle": "2024-06-14T21:31:22.096614Z",
-     "shell.execute_reply": "2024-06-14T21:31:22.096212Z"
+     "iopub.execute_input": "2024-07-19T20:21:08.300458Z",
+     "iopub.status.busy": "2024-07-19T20:21:08.300354Z",
+     "iopub.status.idle": "2024-07-19T20:21:08.745708Z",
+     "shell.execute_reply": "2024-07-19T20:21:08.745264Z"
     },
     "jukit_cell_id": "RcnXoNLyM2"
    },
@@ -56,10 +56,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T21:31:22.098910Z",
-     "iopub.status.busy": "2024-06-14T21:31:22.098696Z",
-     "iopub.status.idle": "2024-06-14T21:31:22.101458Z",
-     "shell.execute_reply": "2024-06-14T21:31:22.101178Z"
+     "iopub.execute_input": "2024-07-19T20:21:08.747608Z",
+     "iopub.status.busy": "2024-07-19T20:21:08.747418Z",
+     "iopub.status.idle": "2024-07-19T20:21:08.750332Z",
+     "shell.execute_reply": "2024-07-19T20:21:08.750003Z"
     },
     "jukit_cell_id": "QmTyYX7yVG"
    },
@@ -106,24 +106,22 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T21:31:22.102970Z",
-     "iopub.status.busy": "2024-06-14T21:31:22.102779Z",
-     "iopub.status.idle": "2024-06-14T21:31:22.486368Z",
-     "shell.execute_reply": "2024-06-14T21:31:22.485984Z"
+     "iopub.execute_input": "2024-07-19T20:21:08.751806Z",
+     "iopub.status.busy": "2024-07-19T20:21:08.751585Z",
+     "iopub.status.idle": "2024-07-19T20:21:09.067096Z",
+     "shell.execute_reply": "2024-07-19T20:21:09.066546Z"
     },
     "jukit_cell_id": "xdgUvt0md2"
    },
    "outputs": [],
    "source": [
-    "plate5df_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_5_sc_feature_selected.parquet\").resolve(strict=True)\n",
     "plate3df_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_3_sc_feature_selected.parquet\").resolve(strict=True)\n",
     "plate3pdf_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_3_prime_sc_feature_selected.parquet\").resolve(strict=True)\n",
-    "plate4df_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_4_sc_feature_selected.parquet\").resolve(strict=True)\n",
+    "plate5df_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_5_sc_feature_selected.parquet\").resolve(strict=True)\n",
     "\n",
-    "plate5df = pd.read_parquet(plate5df_path)\n",
-    "plate4df = pd.read_parquet(plate4df_path)\n",
     "plate3df = pd.read_parquet(plate3df_path)\n",
     "plate3pdf = pd.read_parquet(plate3pdf_path)\n",
+    "plate5df = pd.read_parquet(plate5df_path)\n",
     "\n",
     "# Set the seed\n",
     "rng = np.random.default_rng(0)"
@@ -143,10 +141,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T21:31:22.488529Z",
-     "iopub.status.busy": "2024-06-14T21:31:22.488241Z",
-     "iopub.status.idle": "2024-06-14T21:31:22.490432Z",
-     "shell.execute_reply": "2024-06-14T21:31:22.490159Z"
+     "iopub.execute_input": "2024-07-19T20:21:09.069370Z",
+     "iopub.status.busy": "2024-07-19T20:21:09.069143Z",
+     "iopub.status.idle": "2024-07-19T20:21:09.071752Z",
+     "shell.execute_reply": "2024-07-19T20:21:09.071419Z"
     },
     "jukit_cell_id": "byqT0qeQSc"
    },
@@ -171,10 +169,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T21:31:22.491756Z",
-     "iopub.status.busy": "2024-06-14T21:31:22.491566Z",
-     "iopub.status.idle": "2024-06-14T21:31:22.495829Z",
-     "shell.execute_reply": "2024-06-14T21:31:22.495547Z"
+     "iopub.execute_input": "2024-07-19T20:21:09.073333Z",
+     "iopub.status.busy": "2024-07-19T20:21:09.073098Z",
+     "iopub.status.idle": "2024-07-19T20:21:09.077658Z",
+     "shell.execute_reply": "2024-07-19T20:21:09.077314Z"
     },
     "jukit_cell_id": "qP1KgMqkE7"
    },
@@ -275,10 +273,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T21:31:22.498111Z",
-     "iopub.status.busy": "2024-06-14T21:31:22.497928Z",
-     "iopub.status.idle": "2024-06-14T21:31:22.500181Z",
-     "shell.execute_reply": "2024-06-14T21:31:22.499914Z"
+     "iopub.execute_input": "2024-07-19T20:21:09.079175Z",
+     "iopub.status.busy": "2024-07-19T20:21:09.078970Z",
+     "iopub.status.idle": "2024-07-19T20:21:09.081229Z",
+     "shell.execute_reply": "2024-07-19T20:21:09.080896Z"
     },
     "jukit_cell_id": "z9zzUXpQ67"
    },
@@ -309,20 +307,15 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T21:31:22.501532Z",
-     "iopub.status.busy": "2024-06-14T21:31:22.501428Z",
-     "iopub.status.idle": "2024-06-14T21:31:22.837568Z",
-     "shell.execute_reply": "2024-06-14T21:31:22.837146Z"
+     "iopub.execute_input": "2024-07-19T20:21:09.082677Z",
+     "iopub.status.busy": "2024-07-19T20:21:09.082489Z",
+     "iopub.status.idle": "2024-07-19T20:21:09.372731Z",
+     "shell.execute_reply": "2024-07-19T20:21:09.372244Z"
     },
     "jukit_cell_id": "qrteU1j4F9"
    },
    "outputs": [],
    "source": [
-    "plate5df = process_plates(plate5df)\n",
-    "p5_wells = [\"C9\", \"E11\", \"E3\", \"G3\"]\n",
-    "rest5df, test5df = create_splits(p5_wells, plate5df)\n",
-    "rest5df, test5df = down_sample_by_genotype(rest5df), down_sample_by_genotype(test5df)\n",
-    "\n",
     "plate3df = process_plates(plate3df)\n",
     "p3_wells = [\"C11\", \"E11\", \"C3\", \"F3\"]\n",
     "rest3df, test3df = create_splits(p3_wells, plate3df)\n",
@@ -333,15 +326,10 @@
     "rest3pdf, test3pdf = create_splits(p3p_wells, plate3pdf)\n",
     "rest3pdf, test3pdf = down_sample_by_genotype(rest3pdf), down_sample_by_genotype(test3pdf)\n",
     "\n",
-    "# Removed siRNA-treated cells to retain only Null and WT cells\n",
-    "plate4df[\"Metadata_siRNA\"].fillna(\"No Construct\", inplace=True)\n",
-    "plate4df.dropna(inplace=True)\n",
-    "plate4df = plate4df.loc[plate4df[\"Metadata_siRNA\"] == \"No Construct\"]\n",
-    "\n",
-    "plate4df = process_plates(plate4df)\n",
-    "p4_wells = [\"D5\", \"C11\"]\n",
-    "rest4df, test4df = create_splits(p4_wells, plate4df)\n",
-    "rest4df, test4df = down_sample_by_genotype(rest4df), down_sample_by_genotype(test4df)"
+    "plate5df = process_plates(plate5df)\n",
+    "p5_wells = [\"C9\", \"E11\", \"E3\", \"G3\"]\n",
+    "rest5df, test5df = create_splits(p5_wells, plate5df)\n",
+    "rest5df, test5df = down_sample_by_genotype(rest5df), down_sample_by_genotype(test5df)"
    ]
   },
   {
@@ -358,21 +346,21 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T21:31:22.840007Z",
-     "iopub.status.busy": "2024-06-14T21:31:22.839860Z",
-     "iopub.status.idle": "2024-06-14T21:31:23.015509Z",
-     "shell.execute_reply": "2024-06-14T21:31:23.015081Z"
+     "iopub.execute_input": "2024-07-19T20:21:09.374908Z",
+     "iopub.status.busy": "2024-07-19T20:21:09.374782Z",
+     "iopub.status.idle": "2024-07-19T20:21:09.537487Z",
+     "shell.execute_reply": "2024-07-19T20:21:09.536874Z"
     },
     "jukit_cell_id": "JPOu8mYg6w"
    },
    "outputs": [],
    "source": [
     "# Columns common to all plates\n",
-    "plate_cols = list(set(plate5df.columns) & set(plate3df.columns) & set(plate3pdf.columns) & set(plate4df.columns))\n",
+    "plate_cols = list(set(plate5df.columns) & set(plate3df.columns) & set(plate3pdf.columns))\n",
     "\n",
-    "restdf = pd.concat([rest5df[plate_cols], rest3df[plate_cols], rest3pdf[plate_cols], rest4df[plate_cols]], ignore_index=True).reset_index(drop=True)\n",
+    "restdf = pd.concat([rest3df[plate_cols], rest3pdf[plate_cols], rest5df[plate_cols]], ignore_index=True).reset_index(drop=True)\n",
     "\n",
-    "testdf = pd.concat([test5df[plate_cols], test3df[plate_cols], test3pdf[plate_cols], test4df[plate_cols]], ignore_index=True).reset_index(drop=True)"
+    "testdf = pd.concat([test3df[plate_cols], test3pdf[plate_cols], test5df[plate_cols]], ignore_index=True).reset_index(drop=True)"
    ]
   },
   {
@@ -389,10 +377,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T21:31:23.017495Z",
-     "iopub.status.busy": "2024-06-14T21:31:23.017346Z",
-     "iopub.status.idle": "2024-06-14T21:31:23.021514Z",
-     "shell.execute_reply": "2024-06-14T21:31:23.021240Z"
+     "iopub.execute_input": "2024-07-19T20:21:09.539765Z",
+     "iopub.status.busy": "2024-07-19T20:21:09.539606Z",
+     "iopub.status.idle": "2024-07-19T20:21:09.543873Z",
+     "shell.execute_reply": "2024-07-19T20:21:09.543515Z"
     },
     "jukit_cell_id": "NTCaf4xXY1"
    },
@@ -407,10 +395,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T21:31:23.023176Z",
-     "iopub.status.busy": "2024-06-14T21:31:23.022970Z",
-     "iopub.status.idle": "2024-06-14T21:31:23.044781Z",
-     "shell.execute_reply": "2024-06-14T21:31:23.044420Z"
+     "iopub.execute_input": "2024-07-19T20:21:09.545393Z",
+     "iopub.status.busy": "2024-07-19T20:21:09.545209Z",
+     "iopub.status.idle": "2024-07-19T20:21:09.566594Z",
+     "shell.execute_reply": "2024-07-19T20:21:09.566165Z"
     },
     "jukit_cell_id": "m7apYZPkME"
    },
@@ -451,10 +439,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T21:31:23.046693Z",
-     "iopub.status.busy": "2024-06-14T21:31:23.046580Z",
-     "iopub.status.idle": "2024-06-14T21:31:23.049490Z",
-     "shell.execute_reply": "2024-06-14T21:31:23.049225Z"
+     "iopub.execute_input": "2024-07-19T20:21:09.568474Z",
+     "iopub.status.busy": "2024-07-19T20:21:09.568257Z",
+     "iopub.status.idle": "2024-07-19T20:21:09.571406Z",
+     "shell.execute_reply": "2024-07-19T20:21:09.571078Z"
     },
     "jukit_cell_id": "sZFW0vn0zv"
    },
@@ -506,10 +494,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T21:31:23.051345Z",
-     "iopub.status.busy": "2024-06-14T21:31:23.051121Z",
-     "iopub.status.idle": "2024-06-15T03:50:57.755737Z",
-     "shell.execute_reply": "2024-06-15T03:50:57.755279Z"
+     "iopub.execute_input": "2024-07-19T20:21:09.572973Z",
+     "iopub.status.busy": "2024-07-19T20:21:09.572786Z",
+     "iopub.status.idle": "2024-07-20T03:13:23.267614Z",
+     "shell.execute_reply": "2024-07-20T03:13:23.267154Z"
     },
     "jukit_cell_id": "rHYvmbnZNf"
    },
@@ -518,7 +506,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best average validation accuracy = 0.9024130503181608\n"
+      "Best average validation accuracy = 0.9323605959840006\n"
      ]
     }
    ],
@@ -586,10 +574,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T03:50:57.783101Z",
-     "iopub.status.busy": "2024-06-15T03:50:57.782920Z",
-     "iopub.status.idle": "2024-06-15T03:51:04.443224Z",
-     "shell.execute_reply": "2024-06-15T03:51:04.442831Z"
+     "iopub.execute_input": "2024-07-20T03:13:23.297509Z",
+     "iopub.status.busy": "2024-07-20T03:13:23.297314Z",
+     "iopub.status.idle": "2024-07-20T03:13:32.871574Z",
+     "shell.execute_reply": "2024-07-20T03:13:32.870797Z"
     },
     "jukit_cell_id": "FNeiZcYJzz"
    },
@@ -1001,12 +989,12 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(C=0.23048961229552578, max_iter=3000, n_jobs=-1,\n",
-       "                   random_state=0)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LogisticRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(C=0.23048961229552578, max_iter=3000, n_jobs=-1,\n",
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(C=121.19988484922646, max_iter=3000, n_jobs=-1,\n",
+       "                   random_state=0)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LogisticRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(C=121.19988484922646, max_iter=3000, n_jobs=-1,\n",
        "                   random_state=0)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "LogisticRegression(C=0.23048961229552578, max_iter=3000, n_jobs=-1,\n",
+       "LogisticRegression(C=121.19988484922646, max_iter=3000, n_jobs=-1,\n",
        "                   random_state=0)"
       ]
      },
@@ -1043,10 +1031,10 @@
    "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T03:51:04.445011Z",
-     "iopub.status.busy": "2024-06-15T03:51:04.444773Z",
-     "iopub.status.idle": "2024-06-15T03:51:12.000008Z",
-     "shell.execute_reply": "2024-06-15T03:51:11.999534Z"
+     "iopub.execute_input": "2024-07-20T03:13:32.875142Z",
+     "iopub.status.busy": "2024-07-20T03:13:32.874899Z",
+     "iopub.status.idle": "2024-07-20T03:13:39.567201Z",
+     "shell.execute_reply": "2024-07-20T03:13:39.566773Z"
     },
     "jukit_cell_id": "Hwc1Sal9AZ"
    },
@@ -1082,10 +1070,10 @@
    "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T03:51:12.002151Z",
-     "iopub.status.busy": "2024-06-15T03:51:12.001992Z",
-     "iopub.status.idle": "2024-06-15T03:51:12.156637Z",
-     "shell.execute_reply": "2024-06-15T03:51:12.156212Z"
+     "iopub.execute_input": "2024-07-20T03:13:39.569719Z",
+     "iopub.status.busy": "2024-07-20T03:13:39.569566Z",
+     "iopub.status.idle": "2024-07-20T03:13:39.726629Z",
+     "shell.execute_reply": "2024-07-20T03:13:39.726190Z"
     },
     "jukit_cell_id": "4uw0FlkRQV"
    },
@@ -1103,10 +1091,10 @@
    "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T03:51:12.159133Z",
-     "iopub.status.busy": "2024-06-15T03:51:12.158981Z",
-     "iopub.status.idle": "2024-06-15T03:51:47.616096Z",
-     "shell.execute_reply": "2024-06-15T03:51:47.615509Z"
+     "iopub.execute_input": "2024-07-20T03:13:39.729183Z",
+     "iopub.status.busy": "2024-07-20T03:13:39.729027Z",
+     "iopub.status.idle": "2024-07-20T03:14:13.289064Z",
+     "shell.execute_reply": "2024-07-20T03:14:13.288371Z"
     },
     "jukit_cell_id": "ONBKrPrWx0"
    },
