Updated README with plate correlation analyses details and analysis notebook

--- a/0.data_analysis/plate_correlation_analyses/well_agg_plate_genotype_correlation_analysis.ipynb
+++ b/0.data_analysis/plate_correlation_analyses/well_agg_plate_genotype_correlation_analysis.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Well-Aggregated Plate and Genotype Correlation Analysis\n",
     "Correlations between groups defined by genotype and plate are determined to understand the similarities between group morphologies.\n",
-    "These correlations are computed between cell morphologies aggregated to the well level."
+    "These correlations are computed between cell morphologies aggregated to the well level after feature selection."
    ]
   },
   {
@@ -16,10 +16,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-31T20:06:13.170667Z",
-     "iopub.status.busy": "2024-07-31T20:06:13.170563Z",
-     "iopub.status.idle": "2024-07-31T20:06:13.379169Z",
-     "shell.execute_reply": "2024-07-31T20:06:13.378823Z"
+     "iopub.execute_input": "2024-07-31T20:15:19.028264Z",
+     "iopub.status.busy": "2024-07-31T20:15:19.028161Z",
+     "iopub.status.idle": "2024-07-31T20:15:19.236573Z",
+     "shell.execute_reply": "2024-07-31T20:15:19.236233Z"
     },
     "jukit_cell_id": "CGb0BVUMWf"
    },
@@ -53,10 +53,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-31T20:06:13.381227Z",
-     "iopub.status.busy": "2024-07-31T20:06:13.381048Z",
-     "iopub.status.idle": "2024-07-31T20:06:13.383839Z",
-     "shell.execute_reply": "2024-07-31T20:06:13.383553Z"
+     "iopub.execute_input": "2024-07-31T20:15:19.238586Z",
+     "iopub.status.busy": "2024-07-31T20:15:19.238390Z",
+     "iopub.status.idle": "2024-07-31T20:15:19.241208Z",
+     "shell.execute_reply": "2024-07-31T20:15:19.240939Z"
     },
     "jukit_cell_id": "T1ixkk0ex3"
    },
@@ -94,10 +94,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-31T20:06:13.385216Z",
-     "iopub.status.busy": "2024-07-31T20:06:13.385108Z",
-     "iopub.status.idle": "2024-07-31T20:06:13.545959Z",
-     "shell.execute_reply": "2024-07-31T20:06:13.545604Z"
+     "iopub.execute_input": "2024-07-31T20:15:19.242569Z",
+     "iopub.status.busy": "2024-07-31T20:15:19.242465Z",
+     "iopub.status.idle": "2024-07-31T20:15:19.396588Z",
+     "shell.execute_reply": "2024-07-31T20:15:19.396222Z"
     },
     "jukit_cell_id": "fv2xmp9AeZ"
    },
@@ -128,10 +128,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-31T20:06:13.547886Z",
-     "iopub.status.busy": "2024-07-31T20:06:13.547738Z",
-     "iopub.status.idle": "2024-07-31T20:06:13.550152Z",
-     "shell.execute_reply": "2024-07-31T20:06:13.549865Z"
+     "iopub.execute_input": "2024-07-31T20:15:19.398734Z",
+     "iopub.status.busy": "2024-07-31T20:15:19.398575Z",
+     "iopub.status.idle": "2024-07-31T20:15:19.400926Z",
+     "shell.execute_reply": "2024-07-31T20:15:19.400627Z"
     },
     "jukit_cell_id": "pZMK12ZIUc"
    },
@@ -165,10 +165,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-31T20:06:13.551501Z",
-     "iopub.status.busy": "2024-07-31T20:06:13.551401Z",
-     "iopub.status.idle": "2024-07-31T20:06:13.597817Z",
-     "shell.execute_reply": "2024-07-31T20:06:13.597475Z"
+     "iopub.execute_input": "2024-07-31T20:15:19.402326Z",
+     "iopub.status.busy": "2024-07-31T20:15:19.402223Z",
+     "iopub.status.idle": "2024-07-31T20:15:19.447840Z",
+     "shell.execute_reply": "2024-07-31T20:15:19.447549Z"
     },
     "jukit_cell_id": "F3pA4Cv4nE"
    },
@@ -184,10 +184,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-31T20:06:13.599145Z",
-     "iopub.status.busy": "2024-07-31T20:06:13.599040Z",
-     "iopub.status.idle": "2024-07-31T20:06:13.601513Z",
-     "shell.execute_reply": "2024-07-31T20:06:13.601225Z"
+     "iopub.execute_input": "2024-07-31T20:15:19.449529Z",
+     "iopub.status.busy": "2024-07-31T20:15:19.449234Z",
+     "iopub.status.idle": "2024-07-31T20:15:19.451839Z",
+     "shell.execute_reply": "2024-07-31T20:15:19.451562Z"
     },
     "jukit_cell_id": "7F2REC8Dbk"
    },
@@ -213,10 +213,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-31T20:06:13.602876Z",
-     "iopub.status.busy": "2024-07-31T20:06:13.602774Z",
-     "iopub.status.idle": "2024-07-31T20:06:13.604521Z",
-     "shell.execute_reply": "2024-07-31T20:06:13.604248Z"
+     "iopub.execute_input": "2024-07-31T20:15:19.453230Z",
+     "iopub.status.busy": "2024-07-31T20:15:19.453125Z",
+     "iopub.status.idle": "2024-07-31T20:15:19.454880Z",
+     "shell.execute_reply": "2024-07-31T20:15:19.454608Z"
     },
     "jukit_cell_id": "YPxjtndLAN"
    },
@@ -231,10 +231,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-31T20:06:13.605814Z",
-     "iopub.status.busy": "2024-07-31T20:06:13.605713Z",
-     "iopub.status.idle": "2024-07-31T20:06:13.683199Z",
-     "shell.execute_reply": "2024-07-31T20:06:13.682868Z"
+     "iopub.execute_input": "2024-07-31T20:15:19.456194Z",
+     "iopub.status.busy": "2024-07-31T20:15:19.456091Z",
+     "iopub.status.idle": "2024-07-31T20:15:19.530156Z",
+     "shell.execute_reply": "2024-07-31T20:15:19.529831Z"
     },
     "jukit_cell_id": "FlFnFIA36R"
    },
@@ -420,10 +420,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-31T20:06:13.715336Z",
-     "iopub.status.busy": "2024-07-31T20:06:13.715184Z",
-     "iopub.status.idle": "2024-07-31T20:06:14.624559Z",
-     "shell.execute_reply": "2024-07-31T20:06:14.624191Z"
+     "iopub.execute_input": "2024-07-31T20:15:19.562169Z",
+     "iopub.status.busy": "2024-07-31T20:15:19.562013Z",
+     "iopub.status.idle": "2024-07-31T20:15:20.455906Z",
+     "shell.execute_reply": "2024-07-31T20:15:20.455567Z"
     },
     "jukit_cell_id": "Du6jPm5xP5"
    },
@@ -459,10 +459,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-31T20:06:14.626320Z",
-     "iopub.status.busy": "2024-07-31T20:06:14.626208Z",
-     "iopub.status.idle": "2024-07-31T20:06:15.959730Z",
-     "shell.execute_reply": "2024-07-31T20:06:15.959198Z"
+     "iopub.execute_input": "2024-07-31T20:15:20.457639Z",
+     "iopub.status.busy": "2024-07-31T20:15:20.457513Z",
+     "iopub.status.idle": "2024-07-31T20:15:21.758710Z",
+     "shell.execute_reply": "2024-07-31T20:15:21.758369Z"
     },
     "jukit_cell_id": "bfMQ1sVcMz"
    },
@@ -493,10 +493,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-31T20:06:15.961810Z",
-     "iopub.status.busy": "2024-07-31T20:06:15.961648Z",
-     "iopub.status.idle": "2024-07-31T20:06:16.345898Z",
-     "shell.execute_reply": "2024-07-31T20:06:16.345553Z"
+     "iopub.execute_input": "2024-07-31T20:15:21.761145Z",
+     "iopub.status.busy": "2024-07-31T20:15:21.761006Z",
+     "iopub.status.idle": "2024-07-31T20:15:22.134669Z",
+     "shell.execute_reply": "2024-07-31T20:15:22.134329Z"
     },
     "jukit_cell_id": "EDzbNe3PgY"
    },
@@ -527,10 +527,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-31T20:06:16.347887Z",
-     "iopub.status.busy": "2024-07-31T20:06:16.347735Z",
-     "iopub.status.idle": "2024-07-31T20:06:16.359916Z",
-     "shell.execute_reply": "2024-07-31T20:06:16.359612Z"
+     "iopub.execute_input": "2024-07-31T20:15:22.136397Z",
+     "iopub.status.busy": "2024-07-31T20:15:22.136272Z",
+     "iopub.status.idle": "2024-07-31T20:15:22.148560Z",
+     "shell.execute_reply": "2024-07-31T20:15:22.148242Z"
     },
     "jukit_cell_id": "Kz1w4ViFmv"
    },
@@ -557,10 +557,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-31T20:06:16.364003Z",
-     "iopub.status.busy": "2024-07-31T20:06:16.363737Z",
-     "iopub.status.idle": "2024-07-31T20:06:16.368416Z",
-     "shell.execute_reply": "2024-07-31T20:06:16.368082Z"
+     "iopub.execute_input": "2024-07-31T20:15:22.154435Z",
+     "iopub.status.busy": "2024-07-31T20:15:22.154285Z",
+     "iopub.status.idle": "2024-07-31T20:15:22.159007Z",
+     "shell.execute_reply": "2024-07-31T20:15:22.158735Z"
     },
     "jukit_cell_id": "A0fjXCKcdj"
    },
