update main figure 4

--- a/3.figures/main_figure_4/1.find_sc_crops_top_feat.ipynb
+++ b/3.figures/main_figure_4/1.find_sc_crops_top_feat.ipynb
@@ -511,7 +511,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load in feature importance data and determine the top two differential features for Null"
+    "## Load in feature importance data and determine the top two differential features for Null\n",
+    "\n",
+    "Note: There is a higher weighted feature for WT but we decided these two features were most interesting + we decided correlation features would be not be as easy to interpret."
    ]
   },
   {
@@ -531,7 +533,7 @@
    "source": [
     "feat_import_df = pd.read_parquet(\n",
     "    pathlib.Path(\n",
-    "        \"../../2.evaluate_models/model_evaluation_data/feature_importances.parquet\"\n",
+    "        \"../../2.evaluate_model/model_evaluation_data/feature_importances.parquet\"\n",
     "    )\n",
     ")\n",
     "\n",
