update supp fig 1 folder name

--- a/3.figures/supp_figure_1/SuppFigure1_splitbyplate.ipynb
+++ b/3.figures/supp_figure_1/SuppFigure1_splitbyplate.ipynb
@@ -44,8 +44,7 @@
     "suppressPackageStartupMessages(library(dplyr))\n",
     "suppressPackageStartupMessages(library(ggplot2))\n",
     "suppressPackageStartupMessages(library(grid))\n",
-    "suppressPackageStartupMessages(library(patchwork))\n",
-    "suppressPackageStartupMessages(library(platetools))"
+    "suppressPackageStartupMessages(library(patchwork))"
    ]
   },
   {
